--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,5 @@
     <string name="problemFile">File failed</string>
     <string name="share">Share image using</string>
     <string name="modespe">Special</string>
-    <string name="draughtsset">Draught Set</string>
+    <string name="draughtsset">Checkers game</string>
 </resources>
